Code refactoring (remove Vector und Hashtable, correct generics, code formatting), small changes

--- a/wisim/src/java/net/sourceforge/wisim/controller/JPanelWarehouse.form
+++ b/wisim/src/java/net/sourceforge/wisim/controller/JPanelWarehouse.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.0" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.2" maxVersion="1.2" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[800, 600]"/>
@@ -11,6 +11,14 @@
     <EventHandler event="ancestorRemoved" listener="javax.swing.event.AncestorListener" parameters="javax.swing.event.AncestorEvent" handler="formAncestorRemoved"/>
   </Events>
   <AuxValues>
+    <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
+    <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_generateFQN" type="java.lang.Boolean" value="true"/>
+    <AuxValue name="FormSettings_generateMnemonicsCode" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_i18nAutoMode" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
+    <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
     <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,34,0,0,3,37"/>
   </AuxValues>
 
@@ -67,7 +75,7 @@
                     <Column editable="false" title="aktueller Bestand" type="java.lang.Object"/>
                     <Column editable="false" title="Min. Bestand" type="java.lang.Object"/>
                     <Column editable="false" title="Max. Bestand" type="java.lang.Object"/>
-                    <Column editable="false" title="Lagerplätze" type="java.lang.Object"/>
+                    <Column editable="false" title="Lagerpl&#xe4;tze" type="java.lang.Object"/>
                     <Column editable="false" title="Belegung" type="java.lang.Object"/>
                   </Table>
                 </Property>
@@ -337,9 +345,9 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabelKapazBaldErschöpft">
+        <Component class="javax.swing.JLabel" name="jLabelKapazBaldErsch&#xf6;pft">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Kapazitäten bald erschöpft"/>
+            <Property name="text" type="java.lang.String" value="Kapazit&#xe4;ten bald ersch&#xf6;pft"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -349,7 +357,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelKapazAusreichend">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Kapazitäten ausreichend"/>
+            <Property name="text" type="java.lang.String" value="Kapazit&#xe4;ten ausreichend"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -357,9 +365,9 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabelKapazErschöpft">
+        <Component class="javax.swing.JLabel" name="jLabelKapazErsch&#xf6;pft">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Kapazitäten erschöpft"/>
+            <Property name="text" type="java.lang.String" value="Kapazit&#xe4;ten ersch&#xf6;pft"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
